--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -24,7 +24,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="password">Passowrd</label>
+        <label for="password">Password</label>
         <input
           name="password"
           ngModel
@@ -41,7 +41,7 @@
         </button>
         |
         <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
-          Switch to {{ isLogInMode ? "Sign Up" : "Log in" }}
+          Switch too {{ isLogInMode ? "Sign Up" : "Log in" }}
         </button>
       </div>
     </form>
